wasta-multidesktop (22.04.1.0) UNRELEASED; urgency=medium

  * wasta-login.sh: correcting tracker re-enabling for ubuntu /
    gnome sessions

 -- Rik Shaw <rikshaw76@gmail.com>  Sat, 11 Feb 2023 11:51:04 -0600

wasta-multidesktop (22.04.0.14) jammy; urgency=medium

  * remove slick-greeter badges: each desktop now provides their own

 -- Rik Shaw <rikshaw76@gmail.com>  Thu, 23 Jun 2022 12:12:35 -0500

wasta-multidesktop (22.04.0.13) jammy; urgency=medium

  * account for wasta-gnome-wayland and wasta-gnome-xorg sessions

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 22 Jun 2022 12:19:03 -0500

wasta-multidesktop (22.04.0.12) jammy; urgency=medium

  * remove /etc/skel items, update logos for 22.04

 -- Rik Shaw <rikshaw76@gmail.com>  Wed, 15 Jun 2022 15:53:52 -0500

wasta-multidesktop (22.04.0.11) jammy; urgency=medium

  * Fix gdm3 package name.

 -- Nate Marti <nate_marti@sil.org>  Tue, 29 Mar 2022 11:16:52 +0100

wasta-multidesktop (22.04.0.10) jammy; urgency=medium

  * wasta-logout: update setting xfce background

 -- Rik Shaw <rikshaw76@gmail.com>  Tue, 08 Mar 2022 21:34:49 -0600

wasta-multidesktop (22.04.0.9) jammy; urgency=medium

  * wasta-login: correct tracker service selection list

 -- Rik Shaw <rikshaw76@gmail.com>  Tue, 08 Mar 2022 17:26:38 -0600

wasta-multidesktop (22.04.0.8) jammy; urgency=medium

  * wasta-login: tracker enable / disable cleanup

 -- Rik Shaw <rikshaw76@gmail.com>  Tue, 08 Mar 2022 16:07:11 -0600

wasta-multidesktop (22.04.0.7) jammy; urgency=medium

  * wasta-login and wasta-logout cleanup

 -- Rik Shaw <rikshaw76@gmail.com>  Mon, 07 Mar 2022 11:35:03 -0600

wasta-multidesktop (22.04.0.6) jammy; urgency=medium

  * wasta-login: do NOT need to toggle drawing of desktop anymore

 -- Rik Shaw <rikshaw76@gmail.com>  Fri, 04 Mar 2022 17:09:26 -0600

wasta-multidesktop (22.04.0.5) jammy; urgency=medium

  * don't use set-session-env since greatly simplified getting
    and setting CURR_SESSION